--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -243,7 +243,7 @@
         "price": "Preis",
         "minimumReceived": "Minimum empfangen",
         "priceImpact": "Preis Einfluss",
-        "liquidityProviderFee": "Liquidity provider fee DFI",
+        "liquidityProviderFee": "Liquidity provider fee",
         "verifyTransactionSwap": "Bitte bestätige deine Transaktion und drücke SWAP",
         "transactionSuccessMsg": "Dein Kontostand wird aktualisiert, sobald die Transaktion von der DeFiChain bestätigt wurde.",
         "transactionComplete": "Transaction Complete",
