--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -371,7 +371,7 @@
         "price": "Price",
         "minimumReceived": "Minimum received",
         "priceImpact": "Price impact",
-        "liquidityProviderFee": "Liquidity provider fee DFI",
+        "liquidityProviderFee": "Liquidity provider fee",
         "verifyTransactionSwap": "Please verify transaction and press SWAP",
         "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the DeFi blockchain",
         "transactionComplete": "Transaction complete",
