Fix/issues liquidity (#70)
* Fix: Badge color and design

* Add default value for addresses dropdown

* Allow user select share address for add lp

* Allow user to select before selecting other side

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -318,7 +318,11 @@
         "totalPooled": "Total pooled",
         "amountInsufficient": "Insufficient Amount in your account",
         "ratioMoreThan1": "Das Verhältnis hat sich um mehr als 1% bewegt. Bitte überprüfe deine Eingabebeträge und aktualisiere die Beträge",
-        "ratioChanged": "Das Verhältnis wurde geändert. Bitte überprüfe deine Eingabebeträge und aktualisiere die Beträge"
+        "ratioChanged": "Das Verhältnis wurde geändert. Bitte überprüfe deine Eingabebeträge und aktualisiere die Beträge",
+        "receiveAddress": "Empfänger Adresse",
+        "address": "Adresse",
+        "label": "Label",
+        "selected": "Ausgewählt"
       },
       "removeLiquidity": {
         "address": "Adresse",
