--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -310,7 +310,11 @@
         "totalPooled": "Total pooled",
         "amountInsufficient": "Insufficient balance",
         "ratioMoreThan1": "Ratio has moved more than 1%. Please check your amounts and re-enter",
-        "ratioChanged": "Ratio has changed. Please check your amounts and re-enter"
+        "ratioChanged": "Ratio has changed. Please check your amounts and re-enter",
+        "receiveAddress": "Receive address",
+        "address": "Address",
+        "label": "Label",
+        "selected": "Selected"
       },
       "removeLiquidity": {
         "address": "Address",
