--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -494,6 +494,8 @@
       "general": "Allgemein",
       "display": "Anzeige",
       "launchOptions": "Start Optionen",
+      "reindexOption": "ReIndex Option",
+      "reindexAfterSaving": "Reindex after saving",
       "launchAtLogin": "Start bei der Anmeldung",
       "minimizedAtLaunch": "Minimiert beim starten",
       "storage": "Lagerung",
