--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -489,6 +489,8 @@
       "display": "Display",
       "launchOptions": "Launch options",
       "launchAtLogin": "Launch at login",
+      "reindexOption": "ReIndex Option",
+      "reindexAfterSaving": "Reindex after saving",
       "minimizedAtLaunch": "Minimized at launch",
       "storage": "Storage",
       "pruneBlockStorage": "Prune block storage",
