--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -485,6 +485,8 @@
       "general": "Général",
       "display": "Affichage",
       "launchOptions": "Lancement des options",
+      "reindexOption": "ReIndex Option",
+      "reindexAfterSaving": "Reindex after saving",
       "launchAtLogin": "Lancement au démarage",
       "minimizedAtLaunch": "Minimisé au démarage",
       "storage": "Espace de stockage",
