Update de transation for reindex option

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -494,8 +494,8 @@
       "general": "Allgemein",
       "display": "Anzeige",
       "launchOptions": "Start Optionen",
-      "reindexOption": "ReIndex Option",
-      "reindexAfterSaving": "Reindex after saving",
+      "reindexOption": "Reindex-Option",
+      "reindexAfterSaving": "Reindex nach Soeichern",
       "launchAtLogin": "Start bei der Anmeldung",
       "minimizedAtLaunch": "Minimiert beim starten",
       "storage": "Lagerung",
