--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -543,7 +543,7 @@
         "walletRecoveryInfoLine1": "A wallet recovery seed (“mnemonic seed”, “seed phrase”, “seed words”) is a way to represent your private key as a sequence of words that are easier for a human to remember. It is also used to generate extended keys for all the wallets you create in the app.",
         "walletRecoveryInfoLine2": "The words are randomly-generated from a list of 2048 words defined in the BIP39 standard, and provides 24 bit of safety.",
         "learnMoreAtBitcoinBtn": "Learn more at Bitcoin Wiki",
-        "copied24Words": "I've have copied down 24 words in the exact order",
+        "copied24Words": "I’ve copied down the 24 words in the exact order",
         "continue": "Continue",
         "createNewWallet": "Create new wallet"
       },
