fix: update article on DeFiChain

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -373,7 +373,7 @@
         "priceImpact": "Price impact",
         "liquidityProviderFee": "Liquidity provider fee",
         "verifyTransactionSwap": "Please verify transaction and press SWAP",
-        "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the DeFiChain",
+        "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by DeFiChain",
         "transactionComplete": "Transaction complete",
         "goToWallet": "Go to wallet",
         "go": "Go",
@@ -440,7 +440,7 @@
         "continue": "Continue",
         "cancel": "Cancel",
         "supply": "Supply",
-        "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by the DeFiChain",
+        "transactionSuccessMsg": "Your account balance will update once the transaction has been confirmed by DeFiChain",
         "viewOnChain": "View on chain",
         "backToPool": "Back to pool",
         "totalPooled": "Total pooled",
