--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -594,7 +594,8 @@
         "backToWallet": "Back to wallet",
         "dfiAddress": "DFI address",
         "pleaseTransferFunds": "Please transfer some DFIs to your account",
-        "txHash": "Transaction hash"
+        "txHash": "Transaction hash",
+        "insufficientUtxos": "Insufficient UTXOS"
       },
       "receivePage": {
         "receiveDFITitle": "Receive DFI – DeFi app",
