Design change for Add Liquidity receiveAddress

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -322,7 +322,8 @@
         "receiveAddress": "Empfänger Adresse",
         "address": "Adresse",
         "label": "Label",
-        "selected": "Ausgewählt"
+        "selected": "Ausgewählt",
+        "receiveSharesAt": "Erhalte Anteil zu"
       },
       "removeLiquidity": {
         "address": "Adresse",
@@ -601,7 +602,7 @@
         "sendTitle": "Senden – DeFiChain Client",
         "send": "Senden",
         "pleaseTransferFunds": "Bitte überweise einige DFIs auf dein Konto",
-        "insufficientUtxos": "Insufficient UTXOS"
+        "insufficientUtxos": "Ungenügend UTXOS"
       },
       "receivePage": {
         "receiveDFITitle": "DFI Erhalten– DeFi app",
