--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -374,7 +374,8 @@
           "decimal": "Dezimal",
           "limit": "Limit",
           "mintingSupport": "Minting support",
-          "tradeable": "Handelbar"
+          "tradeable": "Handelbar",
+          "liquidityTokenFor": "Liquidity Token für"
         },
         "dctLabels": {
           "id": "ID",
@@ -384,7 +385,8 @@
           "tradeable": "Tradeable",
           "type": "Typ",
           "decimal": "Dezimal",
-          "limit": "Limit"
+          "limit": "Limit",
+          "liquidityTokenFor": "Liquidity Token für"
         }
       },
       "createToken": {
