Lp ui fixes 1 dec (#72)
* add react-icons back to packages

* Fix buttons, form controls, menu active background and colors

* Fix wrong text, text case and back button case

* Fix DEX welcome page icons

* fix Add/Remove liquidity UTXO progress styles

* Improve token avatar

* Change ETH icon

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -654,7 +654,8 @@
       },
       "walletPage": {
         "walletDefiClient": "Wallet – DeFi app",
-        "wallet": "Wallet",
+        "wallet": "wallet",
+        "wallets": "Wallets",
         "delete": "Löschen",
         "send": "Senden",
         "receive": "Erhalten",
@@ -665,8 +666,8 @@
         "availableBalance": "Verfügbares Guthaben",
         "pending": "Ausstehend",
         "updateAvailableLabel": "Update erhältlich",
-        "includeRewards": "Include Rewards",
-        "tokens": "TOKENS",
+        "includeRewards": "Include rewards",
+        "tokens": "Tokens",
         "loading": "Laden...",
         "category": "Kategorie",
         "blockHeight": "Blockhöhe",
