--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -274,7 +274,8 @@
         "UTXOPrepared": "UTXO vorbereiten",
         "transferringTokens": "Übertragen von Tokens",
         "tokensTransferred": "Tokens Übertragen",
-        "dexExplorer": "Dex Explorer"
+        "dexExplorer": "Dex Explorer",
+        "insufficientUtxos": "Insufficient UTXOS to perform swap"
       },
       "swapTab": { "from": "Von", "to": "An" },
       "poolTab": {
@@ -324,7 +325,8 @@
         "address": "Adresse",
         "label": "Label",
         "selected": "Ausgewählt",
-        "receiveSharesAt": "Erhalte Anteil zu"
+        "receiveSharesAt": "Erhalte Anteil zu",
+        "insufficientUtxos": "Insufficient UTXOS to perform add liquidity"
       },
       "removeLiquidity": {
         "address": "Adresse",
