Add dex explorer link to app (#96)
* Add dex explorer link to app

* Add service to get wrapped DFI balance

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -273,7 +273,8 @@
         "preparingUTXO": "UTXO vorbereitet",
         "UTXOPrepared": "UTXO vorbereiten",
         "transferringTokens": "Übertragen von Tokens",
-        "tokensTransferred": "Tokens Übertragen"
+        "tokensTransferred": "Tokens Übertragen",
+        "dexExplorer": "Dex Explorer"
       },
       "swapTab": { "from": "Von", "to": "An" },
       "poolTab": {
