feat: updated empty txid for rewards

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -671,7 +671,8 @@
         "loading": "Laden...",
         "category": "Kategorie",
         "blockHeight": "Blockhöhe",
-        "amount": "Anzahl"
+        "amount": "Anzahl",
+        "txidNotApplicable": "Transaction ID not applicable"
       },
       "walletTxns": {
         "height": "Höhe",
