Fix/issues liquidity (#99)
* Added check if amount is greater than DEFAULT_DFI

* Design change for Add Liquidity receiveAddress

* Added check if amount is greater than DEFAULT_DFI

* Design change for Add Liquidity receiveAddress

* Revert the Minimum DFI check

* Revert the Minimum DFI check

* Add Icon for AccountToUTXOs type

* Shown own Pooled DFI and BTC in liquidity

* Add Icon for AccountToUTXOs type

* Shown own Pooled DFI and BTC in liquidity

* Changed PoolSwap to Swap

* Add language translation

* Allow user to enter value both sides DEX

* Fix: English Typo

* Notify user when Utxos not sufficient

* Fix: Wallet: Rename Rewards to Reward

* Fix: Footer CSS issues

* Allow user to enter value both sides DEX

* Fix: English Typo

* Notify user when Utxos not sufficient

* Fix: Wallet: Rename Rewards to Reward

* Fix: Footer CSS issues

Co-authored-by: Saurabh Shinde <saurabhshinde391@gmail.com>

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -409,7 +409,8 @@
         "UTXOPrepared": "UTXO prepared",
         "transferringTokens": "Transferring tokens",
         "tokensTransferred": "Tokens transferred",
-        "dexExplorer": "Dex Explorer"
+        "dexExplorer": "Dex Explorer",
+        "insufficientUtxos": "Insufficient UTXOS to perform swap"
       },
       "swapTab": {
         "from": "From",
@@ -462,7 +463,8 @@
         "address": "Address",
         "label": "Label",
         "selected": "Selected",
-        "receiveSharesAt": "Receive shares At"
+        "receiveSharesAt": "Receive shares at",
+        "insufficientUtxos": "Insufficient UTXOS to perform add liquidity"
       },
       "removeLiquidity": {
         "address": "Address",
