feat: wallet page ui updates (#98)
* feat: wallet page ui updates

* feat: removed '-' when txid is empty

* feat: updated empty txid for rewards

* feat: updated colors for txid message

* feat: added german translation

Co-authored-by: Ahmed Hilali <monstrobishi@gmail.com>
Co-authored-by: saurabh391 <66796125+saurabh391@users.noreply.github.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -674,7 +674,8 @@
         "loading": "Laden...",
         "category": "Kategorie",
         "blockHeight": "Blockhöhe",
-        "amount": "Anzahl"
+        "amount": "Anzahl",
+        "txidNotApplicable": "Transaktions-ID nicht anwendbar"
       },
       "walletTxns": {
         "height": "Höhe",
