--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -677,7 +677,8 @@
         "loading": "Loading...",
         "category": "Category",
         "blockHeight": "BlockHeight",
-        "amount": "Amount"
+        "amount": "Amount",
+        "txidNotApplicable": "Transaction ID not applicable"
       },
       "walletWalletsPage": {
         "walletWallets": "Wallets",
