--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -352,7 +352,7 @@
         "totalReward": "Total reward",
         "pooledDFI": "Pooled DFI",
         "dfiPoolShare": "DFI pool share",
-        "poolShare": "pool share"
+        "poolShare": "Pool share percentage"
       }
     },
     "swap": {
