--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -201,7 +201,7 @@
         "remove": "Remove",
         "apy": "APY",
         "pooled": "Pooled",
-        "poolShare": "pool share",
+        "poolShare": "Pool share percentage",
         "pooledBTC": "Pooled BTC",
         "btcPoolShare": "BTC pool share",
         "totalReward": "Total reward",
