--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -638,7 +638,15 @@
         "backButton": "ZURÜCK",
         "createButton": "Erstellen",
         "legacyAddress": "Legacy Adresse",
-        "addressType": "Adressen Typ"
+        "addressType": "Adressen Type",
+        "automaticallyGenerateNewAddress": "Automatically generate a new address",
+        "showAdvanceOptions": "Show advance options",
+        "default": "Default",
+        "legacy": "Legacy",
+        "addReceiveAddress": "Add a receive address",
+        "address": "Adresse",
+        "enterAnAddress": "Enter an address in your account",
+        "invalidAddress": "Invalid Address or check address account"
       },
       "paymentRequests": {
         "time": "Zeit",
