Feature/send token to address rpc call (#133)
* Add check for already used address

* Start using sendtokenstoaddress rpc call

* Fix send functionality issue

* Language translations

* Remove commented code

Co-authored-by: Saurabh Shinde <saurabhshinde391@gmail.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -646,7 +646,7 @@
         "addReceiveAddress": "Eine Empfangsadresse hinzufügen",
         "address": "Adresse",
         "enterAnAddress": "Gib eine Adresse in dein Konto ein",
-        "invalidAddress": "Invalid Address or check address account"
+        "invalidAddress": "Ungültige Adresse. Bitte versichere dich, dass diese Adresse dir gehört, die Adresse wird bereits verwendet."
       },
       "paymentRequests": {
         "time": "Zeit",
