--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -640,7 +640,7 @@
         "addReceiveAddress": "Add a receive address",
         "address": "Address",
         "enterAnAddress": "Enter an address in your account",
-        "invalidAddress": "Invalid Address or check address account"
+        "invalidAddress": "Invalid address. Please check this belongs to you, the current address has been used."
       },
       "paymentRequests": {
         "time": "Time",
