Addded language translation

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -658,7 +658,7 @@
         "label": "Label",
         "address": "Adresse",
         "created": "Erstellt",
-        "warningSeedPhrase": "(Warning: Not saved by seed phrase)"
+        "warningSeedPhrase": "(Warnung: Nicht durch Seed-Phrase gespeichert)"
       },
       "paymentRequestPage": {
         "paymentRequestTitle": "Zahlungsaufforderung %{id} – DeFi app",
